css/theme.css
/* ... */
.theme-help-box-description {overflow: hidden; }

.theme-help-box-container .fa-info{  border: 1px solid #c5c5c5;  background: #f0f0f0; border-radius: 50%; width: 28px; height: 28px; line-height: 26px; display: block; position: absolute; left: -15px; top: -15px; opacity: 1; filter:alpha(opacity=100); color: #888; text-align: center;}


/* ----------------------- */
/* Anchors and buttons     */
/* ----------------------- */

.btn {
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  box-shadow: none !important;
  font-family: 'Arial' !important;
}
.btn .caret {
	margin-left: 5px;
}
.btn-xs {
  font-size: 11px;
}
.btn-secondary {
  background-color: #efefef;
  border-color: #efefef;
  color: #333333;
}
.btn-secondary:hover {
  background-color: #ebebeb;
  border-color: #ebebeb;
}
.dropdown-menu-right {
  right: 0;
  left: auto;
}
.dropdown-menu >li > a {
  font-size: 12px;
}
.theme-icon-text-spacing {
  padding-right: 5px;
}
.theme-text-icon-spacing {
  padding-left: 5px;
}

/* ----------------------- */
/* Fields                  */
/* ----------------------- */

.form-control {
  height: auto;
  min-height: 34px;
}
.form-control.theme-sidebar-search:focus {
  border-color: #fafafa !important;
}
.theme-field-right input[type=checkbox] {
  width: 34px;
  height: 24px;
}
.theme-errmsg-separator {
  margin: 20px 20px 0px 20px;
}
.theme-validation-error {
  color: red;
  font-size: 11px;
}

/* ----------------------- */
/* Radio buttons and sets  */
/* ----------------------- */

.theme-radioset input {
  width: 30px;
  float: left;
}
.theme-radioset label {
  padding-left: 10px;
}
.theme-radioset p {
  margin-left: 40px;
}
.theme-field-radio-set div {
  padding-top: 4px;
  padding-bottom: 4px;
}
.theme-field-radio-set input[type=radio] {
  margin-right: 6px;
}

/* ----------------------- */
/* Progress bars           */
/* ----------------------- */

.progress {
}

/* ----------------------- */
/* Login form              */
/* ----------------------- */

.theme-login-container {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  padding-top: 10%;
}

/* ----------------------- */
/* Sidebar widget FIXME - discuss */
/* ----------------------- */

/* ----------------------- */
/* Charts                  */
/* ----------------------- */

.theme-chart-container {
  width: 100%;
  height: 100px;
}
.theme-chart-xs {
  height: 50px;
}
.theme-chart-small {
  height: 100px;
}
.theme-chart-medium {
  height: 200px;
}
.theme-chart-large {
  height: 350px;
}

/* ----------------------- */
/* Daemons                 */
/* ----------------------- */

.theme-stopped-daemon, .theme-dead-daemon{
  color: red;
}
.theme-daemon-start-stop-status {
  margin-right: 5px;
}

/* ----------------------- */
/* Breadcrumb              */
/* ----------------------- */

.theme-breadcrumb {
  float: left;
}
.theme-breadcrumb-links {
  float: right;
  font-size: 1.7em;
  padding-right: 15px;
}
.theme-breadcrumb-links a {
  color: #ffffff;
  display: inline-block;
  font-size: 30px;
  padding: 6px 0px 0;
  margin-left: 10px;
}




/* ----------------------- */
/* Tables                  */
/* ----------------------- */

.theme-box-tools {
  margin-top: -15px;
}

/* ----------------------- */
/* Tabs                    */
/* ----------------------- */

/* ----------------------- */
/* Boxes (bootstrap-like)  */
/* ----------------------- */

/* ----------------------- */
/* Infoboxes               */
/* ----------------------- */

.theme-infobox {
  margin-top: 30px;
  margin-bottom: 10px;
}
.theme-infobox-title {
  margin-bottom: 10px;
  font-weight: bold;
  text-align: left;
}
.theme-infobox-content {
  text-align: left;
}
.theme-infobox-anchor {
  padding-top: 15px;
  text-align: center;
}
.theme-infobox-buttons {
  text-align: center;
  margin-top: 10px;
}

/* ----------------------- */
/* Dialogboxes             */
/* ----------------------- */

.theme-modal-info {
  float: left;
  width: 60px;
  font-size: 3em;
  margin-top: -8px;
  color: #333;
}
.theme-modal-info.info {
  color: #3c8dbc;
}
.theme-modal-info.warning {
  color: #F90;
}

/* ----------------------- */
/* Wizard                  */
/* ----------------------- */

.theme-wizard-intro-title {
  font-weight: bold;
  padding-bottom: 10px;
}
.theme-wizard-intro-description {
  font-size: 13px;
  margin-left: 100px;
}
.theme-wizard-intro-icon {
  width: 80%;
  height: 100%;
  display: block;
  margin: auto;
  position: relative;
}
/* ... */

